<resources>
    <string name="app_name">Workshop 8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Experts</string>
    <string name="nav_header_subtitle">Where your dreams take flight</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_suppliers">Suppliers</string>
    <string name="menu_products">Products</string>
    <string name="menu_customers">Customers</string>
    <string name="fab_save">Save Button</string>
    <string name="fab_add">Add Button</string>
    <string name="fab_delete">Delete Button</string>
</resources>