<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/ic_packages"
            android:title="@string/menu_packages" />
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/ic_suppliers"
            android:title="@string/menu_suppliers" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customers"
            android:title="@string/menu_customers" />
    </group>
</menu>